[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.87" , features = ["serde-serialize"] }
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
anyhow = "1.0.75"
async-trait = "0.1.73"
chrono = "0.4.31"

[dependencies.web-sys]
version = "0.3"
features = [
  "console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d",
  "Element", "HtmlImageElement", "Response", "Performance", "KeyboardEvent"
]
